# frcobot_ros2

./: API说明CHN.md  README.md
fairino3_v6_moveit2_config/config/: fairino3_v6_robot.ros2_control.xacro  fairino3_v6_robot.srdf  fairino3_v6_robot.urdf.xacro  initial_positions.yaml  joint_limits.yaml  kinematics.yaml  moveit.rviz  moveit_controllers.yaml  moveit_servo.yaml  ompl_planning.yaml  ros2_controllers.yaml
fairino_description/: CMakeLists.txt
fairino_description/proto/: fairino3_v6.proto
fairino_description/urdf/: fairino3_v6.urdf
fairino_hardware.old/include/fairino_hardware/: data_type_def.h  fairino_robot.hpp  gpio_controller.hpp
fairino_hardware.old/src/: fairino_robot.cpp
fairino_hardware/include/fairino_hardware/: command_server.hpp  data_type_def.h  fairino_hardware_interface.hpp
fairino_hardware/libfairino/lib/: libfairino.so.2
fairino_hardware/src/: command_server.cpp  fairino_hardware_interface.cpp  fairino_robot.cpp  gpio_controller.cpp
fr_ros2/src/: ROS_API.cpp  state_feedback.cpp
ros2_control_hardware/: CMakeLists.txt  frcobot_system.cpp  package.xml  ros2_control_frcobot.xml
ros2_control_hardware/include/ros2_control_frcobot/: frcobot_system.hpp  visibility_control.h
